--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -130,3 +130,15 @@ $primary-transition: 0.3s ease !default;
 
 // Spacer
 $spacer: 4px;
+
+// All Packetframe components:
+$components: "pf-btn", 
+      "pf-card", 
+      "pf-input",
+      "pf-nav", 
+      "pf-record", 
+      "pf-record-field", 
+      "pf-record-table",
+      "pf-select",
+      "pf-table",
+      "pf-title", 
